--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "swiper": "^3.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "angular-ui-swiper": "^2.3.8",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
