--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/swiper/dist/js/swiper.min.js"
+              "./node_modules/swiper/dist/js/swiper.min.js",
+              "./node_modules/@ng-bootstrap/ng-bootstrap/bundles/ng-bootstrap.js"
             ]
           },
           "configurations": {
